--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2024"
 
 [dependencies]
 serialport = "4.7.1"
+
+[dev-dependencies]
 tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
